# Inform

./: .gitignore  NHS_GP_APIs_and_Data_Sources.md  README.md  claude.md  clearpath_claude_md.txt  docker-compose.yml  master.csv  package-lock.json  package.json  react-app.js  tsconfig.json  vercel.json
api/: chat.ts
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py  models.py
backend/app/etl/: downloader.py  loader.py  london_trusts.py  parser.py  run.py
backend/app/routers/: chat.py  providers.py  search.py  stats.py
backend/app/services/: geocoding.py  periods.py  ranking.py
data/: deprivation.json  trusts.json
docs/: london-cancer-waiting-times-feasibility.md  project_overview.md
docs/superpowers/plans/: 2026-03-25-patient-flow-visualization.md
docs/superpowers/specs/: 2026-03-25-patient-flow-visualization-design.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatWidget.tsx  PerformanceBadge.tsx  ResultCard.tsx  ResultsMap.tsx  SearchForm.tsx
frontend/src/data/: trustInfo.ts
frontend/src/hooks/: useCancerTypes.ts  useChat.ts  useProvider.ts  useSearch.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: LetterGenerator.tsx  PatientLookup.tsx  RightsPanel.tsx  WaitComparison.tsx
src/lib/: claude.ts  imd.ts  nhs.ts  postcodes.ts  types.ts
src/map/: api.ts  types.ts
tasks/: lessons.md  research-gp-wait-times.md  todo.md
(+27 files in other folders)
